// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="sc-lbhJGD kXIaPr"
  >
    <div
      class="sc-eGRUor isvqVK"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="sc-lbhJGD kXIaPr"
  >
    <div
      class="sc-fWCJzd dizhPM"
    >
      <div
        class="sc-TBWPX VOVJA"
      >
        Max column width:
        <input
          class="sc-jIkXHa dGYUBt"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="sc-ikJyIC cHSuML"
  >
    <div
      class="sc-hiwPVj fVPyJO"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="sc-ikJyIC cHSuML"
  >
    <pre
      class="sc-jeraig bfhbSK"
    >
      ╒═══╕
│x  │
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
